syntax = "proto3";

package msg;

service Greeter {
  rpc StartSampleRpc (Empty) returns (Empty) {}

   rpc SendSamples (Samplesreq) returns (Empty) {}

  rpc PingRpc (Pingreq) returns (Pingres) {}

  rpc metainfoRpc (MetainfoReq) returns (Empty) {}

   rpc FinishSortRpc (Empty) returns (Empty) {}
}

message Pingreq {
    string ip = 1;
}

message Pingres {
    int32 id = 1;
}

message Empty {

}

message Samplesreq  {
    repeated string samples = 1;
}

message MetainfoReq {
    repeated string slaves = 1;
    repeated string pivots = 2;
}
